--- a/html/main.html
+++ b/html/main.html
@@ -46,7 +46,7 @@
 
     <div id="BG"></div>
     <div id="login">
-        <img id="logo" src="http://dmshopkorea.com/data/bbs/design/201205/1935647224_591ecc8f__daisy.jpg" alt="login">
+        <img id="logo" src="../stylesheets/images/loginlogo.jpg" alt="login">
         <img id="member" src="https://cdn-icons-png.flaticon.com/512/1370/1370267.png" style="margin-bottom:15px;"
                 alt="user">
         <div id="form">
