--- a/html/index.html
+++ b/html/index.html
@@ -37,9 +37,9 @@
         <div class="visible"></div>
         <div></div>
         <div></div>
-        <!-- <div></div>
         <div></div>
-        <div></div> -->
+        <div></div>
+        <div></div>
         <article>
             <a>VIRBNB</a>
             <b>여행</b>
