--- a/html/index.html
+++ b/html/index.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/js/swiper.min.js"></script>
 
+    <link rel="stylesheet" href="../stylesheets/css/main.css">
+    <link rel="stylesheet" href="../stylesheets/css/Login.css">
     <link rel="stylesheet" href="../stylesheets/css/index.css">
     <script defer src="../js/index.js"></script>
+    <script defer src="../js/main.js"></script>
 </head>
 
 <body>
@@ -21,20 +24,47 @@
             <h1 class="transition-applied">VIRBNB</h1>
             <ul class="transition-applied">
                 <li>
-                    <a href="#">메인</a>
+                    <a href="main.html">메인</a>
                 </li>
                 <li>
-                    <a href="#">로그인</a>
+                    <a href="#" class="loginicon">로그인</a>
                 </li>
                 <li>
-                    <a href="#">회원가입</a>
+                    <a href="#" class="signUpbtn">회원가입</a>
                 </li>
             </ul>
         </div>
     </header>
+    <div id="BG"></div>
+    <div id="login">
+        <img id="logo" src="../stylesheets/images/loginlogo.jpg" alt="login">
+        <img id="member" src="https://cdn-icons-png.flaticon.com/512/1370/1370267.png" style="margin-bottom:15px;"
+            alt="user">
+        <div id="form">
+            <form>
+                <i class="fa-solid fa-user input-icon"></i><input class="log-input" id='userid' type='text'
+                    placeholder="UserID" /><br>
+                <i class="fa-solid fa-unlock-keyhole input-icon"></i><input class="log-input" id='pwd' type='password'
+                    placeholder="Password" /><br>
+                <input id="check" type="checkbox"><label class="font" for="check">아이디 저장</label>
+            </form>
+
+        </div>
+
+        <div id="btn"><button class="btn-style" onclick="location.href='main-logined.html';">LOGIN</button></div>
+
+        <div>
+            <hr>
+        </div>
+        <div class="font">
+            <span>아이디 찾기</span><span>비밀번호 찾기</span><span>회원가입</span>
+        </div>
+    </div>
 
     <section class="splash">
         <div class="visible"></div>
+        <div></div>
+        <div></div>
         <div></div>
         <div></div>
         <div></div>
