--- a/html/main.html
+++ b/html/main.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../stylesheets/css/main.css">
     <link rel="stylesheet" href="../stylesheets/css/Login.css">
     <link rel="stylesheet" href="../stylesheets/css/common.css">
-    
+
 
     <script defer src="../js/main.js"></script>
     <script defer src="../js/swiper.js"></script>
@@ -36,7 +36,7 @@
                     <input type="text" class="input-box">
                     <i class="fas fa-search search-icon"></i>
                 </div>
-                <a id="loginicon">
+                <a class="loginicon">
                     <i class="fa-solid fa-user-large ss"></i>
                 </a>
             </div>
@@ -48,7 +48,7 @@
     <div id="login">
         <img id="logo" src="../stylesheets/images/loginlogo.jpg" alt="login">
         <img id="member" src="https://cdn-icons-png.flaticon.com/512/1370/1370267.png" style="margin-bottom:15px;"
-                alt="user">
+            alt="user">
         <div id="form">
             <form>
                 <i class="fa-solid fa-user input-icon"></i><input class="log-input" id='userid' type='text'
@@ -146,9 +146,9 @@
                 여러분의 "제 2의 집"인 뉴욕 호텔에서는 <br>
                 여러분의 시간이 집처럼 편안하도록 다양한<br>
                 부대시설을 제공합니다.G엠파이어 스테이트 <br>
-                빌딩(3.0 km), 타임 스퀘어(4.1 km)(와)과 같은<br> 
+                빌딩(3.0 km), 타임 스퀘어(4.1 km)(와)과 같은<br>
                 인기 명소와 가깝기 때문에<br>
-                Trump Soho New York Hotel 숙박 고객들은<br> 
+                Trump Soho New York Hotel 숙박 고객들은<br>
                 뉴욕에서 가장 잘 알려진 관광명소들을 손쉽게<br>
                 경험할 수 있습니다.
             </p>
@@ -350,100 +350,101 @@
 
 
     <!-- FOOTER -->
-    <div class="footer-top">
-        <div class="footer-menu">
-            <ul>
-                <li><a href="">
-                        <h4>VIRBNB</h4>
-                    </a></li>
-                <li><a href="">회사소개</a></li>
-                <li><a href="">회원혜택 안내</a></li>
-            </ul>
-            <ul>
-                <li><a href="">
-                        <h4>고객센터</h4>
-                    </a></li>
-                <li><a href="">공지사항</a></li>
-                <li><a href="">자주찾는질문</a></li>
-                <li><a href="">예약확인</a></li>
-            </ul>
-            <ul>
-                <li><a href="">
-                        <h4>ESG</h4>
-                    </a></li>
-                <li><a href="">그린 앰버서더</a></li>
-                <li><a href="">캠페인 기부</a></li>
-            </ul>
-        </div>
-        <div class="footer-app">
-            <div class="footer-app-info">
-                <div>
-                    <h4><a href="">App 다운로드</a></h4>
-                    <span>VIRBNB 앱 설치하고</span><br>
-                    <span>더 편리하게 이용하세요.</span>
+    <footer>
+        <div class="footer-top">
+            <div class="footer-menu">
+                <ul>
+                    <li><a href="">
+                            <h4>VIRBNB</h4>
+                        </a></li>
+                    <li><a href="">회사소개</a></li>
+                    <li><a href="">회원혜택 안내</a></li>
+                </ul>
+                <ul>
+                    <li><a href="">
+                            <h4>고객센터</h4>
+                        </a></li>
+                    <li><a href="">공지사항</a></li>
+                    <li><a href="">자주찾는질문</a></li>
+                    <li><a href="">예약확인</a></li>
+                </ul>
+                <ul>
+                    <li><a href="">
+                            <h4>ESG</h4>
+                        </a></li>
+                    <li><a href="">그린 앰버서더</a></li>
+                    <li><a href="">캠페인 기부</a></li>
+                </ul>
+            </div>
+            <div class="footer-app">
+                <div class="footer-app-info">
+                    <div>
+                        <h4><a href="">App 다운로드</a></h4>
+                        <span>VIRBNB 앱 설치하고</span><br>
+                        <span>더 편리하게 이용하세요.</span>
+                    </div>
+                    <div class="footer-app-Btn">
+                        <button class="footer-app-Btn-style">구글플레이</button>
+                        <button class="footer-app-Btn-style">앱스토어</button>
+                    </div>
                 </div>
-                <div class="footer-app-Btn">
-                    <button class="footer-app-Btn-style">구글플레이</button>
-                    <button class="footer-app-Btn-style">앱스토어</button>
+                <div class="footer-app-QR">
+                    <img src="../stylesheets/images/QRCodeImg.jpg" alt="" style="width: 100px; height: 100px;">
                 </div>
-            </div>
-            <div class="footer-app-QR">
-                <img src="../stylesheets/images/QRCodeImg.jpg" alt="" style="width: 100px; height: 100px;">
-            </div>
-
-        </div>
-        <div class="footer-center">
-            <div class="footer-center-info">
-                <h4>전화예약/고객상담</h4>
-                <span>이용에 궁금하신 점이</span><br>
-                <span>있으신가요?</span>
-            </div>
-            <div>
-                <img src="../stylesheets/images/instagram.png" class="footer-icon-img" alt="">
-                <img src="../stylesheets/images/facebook.png" class="footer-icon-img" alt="">
-                <img src="../stylesheets/images/youtube.png" class="footer-icon-img" alt="">
-                <img src="../stylesheets/images/share.png" class="footer-icon-img" alt="">
 
             </div>
-            <div>
-                <h4>1500-0000</h4>
-                <div>
-                    <label>평일</label>
-                    <span>09:00 ~ 18:00</span>
+            <div class="footer-center">
+                <div class="footer-center-info">
+                    <h4>전화예약/고객상담</h4>
+                    <span>이용에 궁금하신 점이</span><br>
+                    <span>있으신가요?</span>
                 </div>
                 <div>
-                    <label>점심시간</label>
-                    <span>12:00 ~ 13:00</span>
+                    <img src="../stylesheets/images/instagram.png" class="footer-icon-img" alt="인스타그램">
+                    <img src="../stylesheets/images/facebook.png" class="footer-icon-img" alt="페이스북">
+                    <img src="../stylesheets/images/youtube.png" class="footer-icon-img" alt="유튜브">
+                    <img src="../stylesheets/images/share.png" class="footer-icon-img" alt="공유">
+
+                </div>
+                <div>
+                    <h4>1500-0000</h4>
+                    <div>
+                        <label>평일</label>
+                        <span>09:00 ~ 18:00</span>
+                    </div>
+                    <div>
+                        <label>점심시간</label>
+                        <span>12:00 ~ 13:00</span>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="footer-bottom">
-        <div class="footer-bottom-info">
-            <div class="footer-bottom-menu">
-                <span>개인정보처리방침 | 이용약관</span>
+        <div class="footer-bottom">
+            <div class="footer-bottom-info">
+                <div class="footer-bottom-menu">
+                    <span>개인정보처리방침 | 이용약관</span>
+                </div>
+                <div>
+                    <span>(주)VIRBNB 대표 : 이동관 |</span>
+                    <span>사업자등록번호 : 100-00-00000 </span>
+                    <button class="footer-bottom-Btn-style">사업자등록번호</button>
+                    <span> | 관광사업자 등록번호 : 제2022-06호</span>
+                </div>
+                <div>
+                    <p>대구광역시 중구 중앙대로 336 반월센트럴타워</p>
+                    <span>전화 : 053-000-0000 | email : virbnb@virbnb.co.kr</span>
+                </div>
+                <hr>
+                <div>
+                    <span>copyright (c) 2022 virbnb</span>
+                </div>
             </div>
-            <div>
-                <span>(주)VIRBNB 대표 : 이동관 |</span>
-                <span>사업자등록번호 : 100-00-00000 </span>
-                <button class="footer-bottom-Btn-style">사업자등록번호</button>
-                <span> | 관광사업자 등록번호 : 제2022-06호</span>
-            </div>
-            <div>
-                <p>대구광역시 중구 중앙대로 336 반월센트럴타워</p>
-                <span>전화 : 053-000-0000 | email : virbnb@virbnb.co.kr</span>
-            </div>
-            <hr>
-            <div>
-                <span>copyright (c) 2022 virbnb</span>
+            <div class="footer-bottom-logo">
+                <img src="../stylesheets/images/logo.png" alt="" class="footer-logo-img">
             </div>
         </div>
-        <div class="footer-bottom-logo">
-            <img src="../stylesheets/images/logo.png" alt="" class="footer-logo-img">
-        </div>
-    </div>
-
+    </footer>
 </body>
 
 </html>
