--- a/html/main.html
+++ b/html/main.html
@@ -66,7 +66,7 @@
             <hr>
         </div>
         <div class="font">
-            <span>아이디 찾기</span><span>비밀번호 찾기</span><span>회원가입</span>
+            <span>아이디 찾기</span><span>비밀번호 찾기</span><span class="signUpbtn">회원가입</span>
         </div>
     </div>
 
