--- a/html/main-logined.html
+++ b/html/main-logined.html
@@ -57,13 +57,13 @@
                 <td><a href="mypage.html">내 정보</a></td>
             </tr>
             <tr>
-                <td><a href="">위시리스트</a></td>
+                <td><a href="wishlist.html">위시리스트</a></td>
             </tr>
             <tr>
                 <td><a href="">숙소관리</a></td>
             </tr>
             <tr>
-                <td><a href="">예약 확인 / 취소</a></td>
+                <td><a href="reserv-cancell.html">예약 확인 / 취소</a></td>
             </tr>
             <tr>
                 <td>
