--- a/html/mypage.html
+++ b/html/mypage.html
@@ -33,13 +33,13 @@
 
 
     <div id="mypagemain">
-        <div id="menu">
-            <ul id="mylist">
+        <div class="cate-menu">
+            <ul class="cate-mylist">
                 <li><a href="mypage.html">내 정보</a></li>
-                <li><a href="#">위시리스트</a></li>
+                <li><a href="wishlist.html">위시리스트</a></li>
                 <li><a href="#">예약</a></li>
             </ul>
-            <ul id="logout">
+            <ul class="cate-mylist">
                 <li><a href="main.html">로그아웃</a></li>
                 <li><a href="#">회원탈퇴</a></li>
             </ul>
