--- a/html/reserv-cancell.html
+++ b/html/reserv-cancell.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/9c09db3bf3.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="../stylesheets/css/common.css">
+    <link rel="stylesheet" href="../stylesheets/css/main.css">
     <link rel="stylesheet" href="../stylesheets/css/infomodify.css">
     <link rel="stylesheet" href="../stylesheets/css/reserv-cancell.css">
     <script defer src="../js/main.js"></script>
@@ -106,7 +107,7 @@
                     <div class="reserv-cancell-BoxStyle">
                         <img style="width: 160px; height: 170px;" src="../stylesheets/images/1.jpg" alt=""><br>
                     </div>
-                    <div>
+                    <div class="reserv-cancell-info">
                         <ul>
                             <h2>potatohead님의 숙소</h2>
                             <li>체크인 : 2022/06/26 - 체크아웃 : 2022/06/27</li>
@@ -124,7 +125,7 @@
                     <div class="reserv-cancell-BoxStyle">
                         <img style="width: 160px; height: 170px;" src="../stylesheets/images/4.jpg" alt=""><br>
                     </div>
-                    <div>
+                    <div class="reserv-cancell-info">
                         <ul>
                             <h2>고성, 해가 지는 곳으로</h2>
                             <li>체크인 : 2022/06/04 - 체크아웃 : 2022/06/05</li>
