--- a/html/main.html
+++ b/html/main.html
@@ -29,7 +29,7 @@
     <header>
         <div class="wrap">
             <div class="logo">
-                <a href="main.html">
+                <a href="index.html">
                     <img src="../stylesheets/images/logo.png" alt="logo" style="width:80px;">
                 </a>
                 <div id="inputicon">
