--- a/html/signUp.html
+++ b/html/signUp.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/9c09db3bf3.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="../js/main.js"></script>
-    <link rel="stylesheet" href="../stylesheets/css/GuestJoin.css">
+    <link rel="stylesheet" href="../stylesheets/css/signUp.css">
     <link rel="stylesheet" href="../stylesheets/css/common.css">
     <link rel="stylesheet" href="../stylesheets/css/Login.css">
     
@@ -108,7 +108,7 @@
             </tr> 
             <tr>
                 <td colspan="2" style="text-align:center;">
-                    <input type="submit" value="등록하기">
+                    <input type="submit" value="회원가입">
                 </td>
             </tr>  
         </table>
